--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <html>Hello World</html>
+    <h1>Hello World</h1>
+    <p>Github is my new third place!!!</p>
 </body>
 </html>
